--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,16 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/etanetas/etatmssync#readme",
   "dependencies": {
-    "webpack": "^4.32.2"
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5"
   }
 }
