--- a/package.json
+++ b/package.json
@@ -19,10 +19,23 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/etanetas/etatmssync#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
+    "file-loader": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "font-awesome-icons": "^1.6.0",
+    "hogan": "^1.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.11",
+    "mini-css-extract-plugin": "^0.7.0",
+    "mustache": "^3.0.1",
+    "node-sass": "^4.12.0",
+    "proxy-polyfill": "^0.3.0",
+    "raw-loader": "^2.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   },
